Changelog for Yii User Management Module (Yum) 



New in 0.8-rc2:
- removed the yumsettings table and functionality completely. All options need to be configured in the application configuration now. This really is better.  Note that yumTextSettings are kept. Because they make sense. Yumsettings dont. 
- started to make the module clean. The avatar module now is a own submodule.
See docs/avatar.txt on how to use it now. I will do this for all other
submodules step-by-step, too. 

New in 0.8:
- BUGFIX: Dont show if the message has been read by the recipient in my sent
  messages anymore
- Added 'visitors' to profiles (who visited whom when, and display it)
- Added possibility to enable profile visit logs for an user in the privacy
settings (thyseus)
- Added YumUser::STATUS_ACTIVATED (thyseus) (activated but did not log in yet after
actiation)
- Added YumUser::STATUS_REMOVED (thyseus)
- Added new membership system (thyseus)
- Messages with CJuiDialog popup (thyseus)
- Added Documentation about the new, experimental Permission system (thyseus)
- Added ignore users to privacy settings (thyseus)
- Introduced YumMailer (bigchirv)
- reworked messaging System (thyseus)
- Added User privacy settings (thyseus)
- Added Usergroup submodule (thyseus)
- Support for Facebook Connect (bigchirv)
- New User activity logging subsystem (see YumActivityController) - logging of login, logout, wrong password attempt, recovery and registration into database and Yii log file
- Added avatar upload possibility for users
- Added support for send emails out of SwiftMailer (docs/swiftMailer.txt)
- Added DROPDOWNLIST field type to profile fields. see docs/dropdownlist_in_registration_form.txt for information on how to use this (thyseus)
- Added possibility to make roles selectable on registration (thyseus)
- Added user Generator (available under 'other' when debug mode is enabled)
- New default URL route '<app>/user/login' instead of less beautiful '<app>/user/user/login' (thyseus)